Fix header text alignment and buttons

--- a/client/scss/components/_header.scss
+++ b/client/scss/components/_header.scss
@@ -198,6 +198,8 @@ header {
     padding-bottom: 1.5em;
 
     .left {
+      @apply w-flex w-items-center;
+
       float: left;
       margin-inline-end: 0;
 
